--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,28 @@
 /* write your override styles here */
+
+#wall .tag-1 {
+    display: none;
+  }
+
+
+#wall #tag-2 {
+    display: none;
+  }
+
+#wall #tag-4 {
+    display: flex;
+  }
+  
+  div#wall .parent #tag-5.slick {
+    display: none;
+  }
+  
+  div#wall div.parent div:last-child div#tag-6 {
+    display: grid;
+  }
+  
+  body div#wall div.parent div > #tag-7.slick {
+    background: url(../images/tag-7.png) no-repeat;
+    z-index: 1;
+    display: block;
+  }
